--- a/temp.css
+++ b/temp.css
@@ -529,4 +529,320 @@ html {
         /* Add margin to separate from parent box */
     }
 
+/* slider2 */
+/* Smooth Transitions */
+.smooth-animate {
+  transition: all 3s ease; /* Adjust the transition duration and easing as needed */
+}
+
+/* Navbar */
+.fixed-nav-bar {
+  position: fixed;
+  z-index: 30;
+  width: 100%;
+}
+
+/* Button Shadows */
+.hover-shadow-btn:hover {
+  box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan;
+}
+.fixed-shadow {
+  box-shadow: 0 0 5px #0ef, 0 0 10px #0ef, 0 0 25px #0ef;
+}
+.fixed-shadow:hover {
+  box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan;
+}
+
+/* Section Background Image Transition */
+#planet-types-section {
+  transition: background-image 0.5s ease-in-out;
+}
+
+/* Exoplanet Description */
+#exoplanet-description {
+  transition: opacity 0.5s ease-in-out;
+  opacity: 1;
+}
+
+/* Image Slider */
+.fullscreen-slider {
+  height: 100vh;
+  position: relative;
+  color: white;
+}
+.fullscreen-slider .slider-items .slide-item {
+  position: absolute;
+  inset: 0 0 0 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+.fullscreen-slider .slider-items .slide-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.fullscreen-slider .slider-items .slide-item::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-image: linear-gradient(to top, #000 20%, transparent);
+}
+.fullscreen-slider .slider-items .slide-content {
+  position: absolute;
+  left: 5%;
+  top: 15%;
+  width: 500px;
+  max-width: 80%;
+  z-index: 1;
+}
+.fullscreen-slider .slider-items .slide-content p:first-child {
+  text-transform: uppercase;
+  letter-spacing: 10px;
+}
+.fullscreen-slider .slider-items .slide-content h2 {
+  font-size: 100px;
+  margin: 0;
+}
+.fullscreen-slider .slider-items .slide-item.active {
+  opacity: 1;
+  z-index: 10;
+}
+@keyframes slideContentAnimation {
+  to {
+    transform: translateY(0);
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+.fullscreen-slider .slider-items .slide-item.active p:first-child,
+.fullscreen-slider .slider-items .slide-item.active h2,
+.fullscreen-slider .slider-items .slide-item.active p:nth-child(3) {
+  transform: translateY(30px);
+  filter: blur(20px);
+  opacity: 0;
+  animation: slideContentAnimation 0.5s 0.7s ease-in-out 1 forwards;
+}
+.fullscreen-slider .slider-items .slide-item.active h2 {
+  animation-delay: 1s;
+}
+.fullscreen-slider .slider-items .slide-item.active p:nth-child(3) {
+  animation-duration: 1.3s;
+}
+
+/* Slider Arrows */
+.slider-controls {
+  position: absolute;
+  top: 30%;
+  right: 50px;
+  z-index: 100;
+}
+.slider-controls button {
+  background-color: #eee5;
+  border: none;
+  font-family: monospace;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  font-size: x-large;
+  color: #eee;
+  transition: 0.5s;
+}
+.slider-controls button:hover {
+  background-color: #eee;
+  color: black;
+}
+
+/* Thumbnails */
+.slider-thumbnails {
+  position: absolute;
+  bottom: 20px;
+  z-index: 11;
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  height: 250px;
+  padding: 0 50px;
+  box-sizing: border-box;
+  overflow: auto;
+  justify-content: right;
+}
+.slider-thumbnails::-webkit-scrollbar {
+  width: 0;
+}
+.slider-thumbnails .thumbnail-item {
+  width: 150px;
+  height: 220px;
+  filter: brightness(0.5);
+  transition: 0.5s;
+  flex-shrink: 0;
+}
+.slider-thumbnails .thumbnail-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.slider-thumbnails .thumbnail-item.active {
+  filter: brightness(1.5);
+}
+
+@media screen and (max-width: 678px) {
+  .slider-thumbnails {
+    justify-content: start;
+  }
+  .fullscreen-slider .slider-items .slide-content h2 {
+    font-size: 60px;
+  }
+  .slider-controls {
+    top: 10%;
+  }
+}
+
+/* Roadmap Progress Bar */
+.progress-roadmap-container {
+  position: relative;
+  width: 90%;
+  margin: auto;
+  height: 100px;
+  margin-top: 65px;
+}
+.progress-roadmap-container ul {
+  padding: 0;
+  margin: 0;
+  padding-top: 12px;
+  position: absolute;
+  width: 100%;
+  margin-top: -33px;
+}
+.progress-roadmap-container li::before {
+  content: " ";
+  display: block;
+  margin: auto;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: solid 2px #555;
+  transition: all 0.3s ease;
+}
+.progress-roadmap-container li.active::before,
+.progress-roadmap-container li:hover::before {
+  border: solid 2px #ffffff;
+  background: linear-gradient(to right, #00aaff 0%, #121212 100%);
+}
+.progress-roadmap-container li {
+  list-style: none;
+  float: left;
+  width: 14%;
+  text-align: center;
+  color: #777;
+  text-transform: uppercase;
+  font-size: 11px;
+  cursor: pointer;
+  font-weight: 700;
+  transition: all 0.2s ease;
+  vertical-align: bottom;
+  height: 60px;
+  position: relative;
+}
+.progress-roadmap-container li .roadmap-step {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  font-size: 14px;
+}
+.progress-roadmap-container li.active,
+.progress-roadmap-container li:hover {
+  color: #ffffff;
+}
+.progress-roadmap-container li::after {
+  content: " ";
+  display: block;
+  width: 20px;
+  height: 20px;
+  background: #999;
+  margin: auto;
+  border: solid 7px #f8f7f7;
+  border-radius: 50%;
+  margin-top: 40px;
+  box-shadow: 0 2px 13px -1px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s ease;
+}
+.progress-roadmap-container li:hover::after {
+  background: #bbb;
+}
+.progress-roadmap-container li.active::after {
+  background: #1e88e5;
+}
+.progress-line {
+  width: 84%;
+  margin: auto;
+  background: #444;
+  height: 6px;
+  position: absolute;
+  left: 7%;
+  top: 57px;
+  z-index: 1;
+  border-radius: 50px;
+  transition: all 0.9s ease;
+}
+.progress-line-fill {
+  width: 3%;
+  height: 100%;
+  background: linear-gradient(to right, #1e88e5 0%, #42a5f5 100%);
+  position: absolute;
+  z-index: 2;
+  border-radius: 50px;
+  transition: all 0.9s ease;
+}
+
+/* Progress Content */
+.progress-content-container {
+  width: 90%;
+  height: 11rem;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
+  backdrop-filter: blur(10px) saturate(150%);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.progress-content-container .content-block {
+  padding: 30px 40px;
+  text-align: center;
+}
+.progress-content-container .content-block h2 {
+  font-size: 17px;
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 1px;
+}
+.progress-content-container .content-block p {
+  font-size: 16px;
+  line-height: 1.8em;
+  color: #ffffff;
+}
+.progress-content-container .content-block {
+  display: none;
+  animation: fadeInUp 700ms ease 1;
+  animation-fill-mode: forwards;
+  transform: translateY(15px);
+  opacity: 0;
+}
+.progress-content-container .content-block.active {
+  display: block;
+}
+
+@keyframes fadeInUp {
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
+
+
 @tailwind utilities;
