Adding the game

--- a/templates/temp4.html
+++ b/templates/temp4.html
@@ -67,7 +67,7 @@
       </button>
       <button data-aos="fade-right" data-aos-delay="800" data-aos-duration="1000"
         class="bg-bright rounded-lg py-1 px-2 btnShadow">
-        <a href="/quest" class="text-white text-lg font-semibold ">Start Your Quest</a>
+        <a href="http://127.0.0.1:5500/Game/index.html" class="text-white text-lg font-semibold ">Start Your Quest</a>
       </button>
 
     </div>
@@ -564,7 +564,7 @@ class="absolute z-[19999999999999] inset-0 bg-[url('/static/img/planet_info.jpg'
     <div class="flex md:space-x-6 md:ml-10 md:mt-10 ml-5 mt-5" data-aos="fade-right" data-aos-delay="400"
       data-aos-duration="1000">
       <button class="bg-bright rounded-lg py-1 px-2 btnShadow">
-        <a href="/quest" class="text-white text-lg font-semibold ">Start Your Quest</a>
+        <a href="http://127.0.0.1:5500/Game/index.html" class="text-white text-lg font-semibold ">Start Your Quest</a>
       </button>
     </div>
   </div>
