--- a/templates/test.html
+++ b/templates/test.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body class="flex items-center justify-center h-screen bg-gray-900 text-white">
-    <img src="/static/img/sad.png" alt="astraunaut" class="absolute left-56 bottom-3">
+    <img src="/static/img/sad.png" alt="astraunaut" class="absolute left-[1rem] bottom-[-6.5rem]">
     <div class="text-center space-y-6">
         <div class="p-8 bg-gray-800 rounded-lg shadow-lg">
             <p id="message" class="text-xl fade-in"></p>
