--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1629,6 +1629,30 @@ html {
   top: 15rem;
 }
 
+.left-36{
+  left: 9rem;
+}
+
+.bottom-2{
+  bottom: 0.5rem;
+}
+
+.left-\[1rem\]{
+  left: 1rem;
+}
+
+.bottom-\[-6\.\]{
+  bottom: -6.;
+}
+
+.bottom-\[-6\.5\]{
+  bottom: -6.5;
+}
+
+.bottom-\[-6\.5rem\]{
+  bottom: -6.5rem;
+}
+
 .z-\[10000\]{
   z-index: 10000;
 }
